Refactor image ingester to only handle ingest

--- a/conf/PictSeek-behaviour.yaml
+++ b/conf/PictSeek-behaviour.yaml
@@ -1,6 +1,9 @@
-icloudIngester:
+ingest:
+  from: /tmp/images
+  to: /tmp/images/tiff
+
+icloudDownloaded:
   user: username
   password: password
   downloadDirectory: /tmp/images
-  tiffDirectory: /tmp/images/tiff
   dockerImage: true
