add shell script to run iCloud Photo Downloader

--- a/conf/PictSeek-behaviour.yaml
+++ b/conf/PictSeek-behaviour.yaml
@@ -2,8 +2,9 @@ ingest:
   from: /tmp/images
   to: /tmp/images/tiff
 
-icloudDownloaded:
+icloudDownloader:
   user: username
   password: password
   downloadDirectory: /tmp/images
   dockerImage: true
+
