Add class for constructing image urls

--- a/conf/PictSeek-behaviour.yaml
+++ b/conf/PictSeek-behaviour.yaml
@@ -12,4 +12,4 @@ solr:
   url: url.to.solr
   collection: collectionName
 
-imageserver: IIPImage.imageserver
+imageserver: IIPImage.com/imageserver
