First shot at using azure vision AI

--- a/conf/PictSeek-behaviour.yaml
+++ b/conf/PictSeek-behaviour.yaml
@@ -13,3 +13,7 @@ solr:
   collection: collectionName
 
 imageserver: IIPImage.com/imageserver
+
+azure:
+  endpoint: computervision.endpoint.com
+  key: hereShouldBeAValidKey
