--- a/pom.xml
+++ b/pom.xml
@@ -276,6 +276,12 @@
             <version>9.0.89</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>42.6.0</version>
+        </dependency>
+
 
     </dependencies>
 
